@@ -1,79 +1,57 @@
 package com.ordertogether.team14_be.spot.service;
 
-import com.ordertogether.team14_be.spot.dto.SpotDto;
+import com.ordertogether.team14_be.spot.dto.controllerdto.SpotCreationResponse;
+import com.ordertogether.team14_be.spot.dto.controllerdto.SpotDetailResponse;
+import com.ordertogether.team14_be.spot.dto.controllerdto.SpotViewedResponse;
+import com.ordertogether.team14_be.spot.dto.servicedto.SpotDto;
 import com.ordertogether.team14_be.spot.entity.Spot;
+import com.ordertogether.team14_be.spot.mapper.SpotMapper;
 import com.ordertogether.team14_be.spot.repository.SpotRepository;
-import jakarta.persistence.EntityNotFoundException;
-import jakarta.transaction.Transactional;
 import java.math.BigDecimal;
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 @Service
+@RequiredArgsConstructor
 public class SpotService {
 
 	private final SpotRepository spotRepository;
 
-	@Autowired
-	public SpotService(SpotRepository spotRepository) {
-		this.spotRepository = spotRepository;
-	}
-
 	// Spot 전체 조회하기
-	public List<SpotDto> getSpot(BigDecimal lat, BigDecimal lng) {
+	@Transactional(readOnly = true)
+	public List<SpotViewedResponse> getSpot(BigDecimal lat, BigDecimal lng) {
 		return spotRepository.findByLatAndLngAndIsDeletedFalse(lat, lng).stream()
-				.map(this::toDto)
-				.collect(Collectors.toList());
+				.map(SpotMapper.INSTANCE::toSpotViewedResponse)
+				.toList();
 	}
 
 	@Transactional
-	public SpotDto createSpot(SpotDto spotDto) {
-		Spot spot = spotDto.toEntity();
-		return toDto(spotRepository.save(spot));
+	public SpotCreationResponse createSpot(SpotDto spotDto) {
+		Spot spot = SpotMapper.INSTANCE.toEntity(spotDto, new Spot());
+		return SpotMapper.INSTANCE.toSpotCreationResponse(spotRepository.save(spot));
 	}
 
 	// Spot 상세 조회하기
-	public SpotDto getSpot(Long id) {
-		Spot spot =
-				spotRepository
-						.findById(id)
-						.orElseThrow(() -> new EntityNotFoundException("Spot을 찾을 수 없습니다."));
-		return toDto(spot);
+	@Transactional(readOnly = true)
+	public SpotDetailResponse getSpot(Long id) {
+		SpotDto spotDto = spotRepository.findByIdAndIsDeletedFalse(id);
+		return SpotMapper.INSTANCE.toSpotDetailResponse(spotDto);
 	}
 
 	@Transactional
 	public SpotDto updateSpot(SpotDto spotDto) {
-		Spot spot = spotRepository.save(spotDto.toEntity());
-		return toDto(spot);
+		Spot spot =
+				SpotMapper.INSTANCE.toEntity(
+						spotDto,
+						SpotMapper.INSTANCE.toEntity(
+								spotRepository.findByIdAndIsDeletedFalse(spotDto.getId())));
+		return SpotMapper.INSTANCE.toDto(spot);
 	}
 
 	@Transactional
 	public void deleteSpot(Long id) {
-		Optional<Spot> spotToDelete = spotRepository.findByIdAndIsDeletedFalse(id);
-		spotToDelete.ifPresent(Spot::delete);
-	}
-
-	// Service Layer에서 toDto만들어서 매핑시키기
-	public SpotDto toDto(Spot spotInStream) {
-		Spot spot =
-				spotRepository
-						.findById(spotInStream.getId())
-						.orElseThrow(() -> new EntityNotFoundException("Spot을 찾을 수 없습니다."));
-
-		return SpotDto.builder()
-				.id(spot.getId())
-				.lat(spot.getLat())
-				.lng(spot.getLng())
-				.category(spot.getCategory())
-				.storeName(spot.getStoreName())
-				.minimumOrderAmount(spot.getMinimumOrderAmount())
-				.togetherOrderLink(spot.getTogetherOrderLink())
-				.pickUpLocation(spot.getPickUpLocation())
-				.deliveryStatus(spot.getDeliveryStatus())
-				.isDeleted(spot.getIsDeleted())
-				.build();
+		spotRepository.delete(id);
 	}
 }
